# itu-sdse-project_101

./: README.md  pipeline.go  requirements.txt
.github/workflows/: test_action.yml
docs/: mkdocs.yml
itu-sdse-project_101/: Makefile  README.md  go.mod  pipeline.go  pyproject.toml  requirements.txt
itu-sdse-project_101/docs/docs/: index.md
itu-sdse-project_101/itu_mlops_project_101/: data_features.py  data_preprocessing.py  data_processing.py  model_selection.py  model_training.py
itu_mlops_project_101/: data_cleaning.py  data_features.py  model_selection.py  model_training.py
