[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "itu_mlops_project_101"
version = "0.0.1"
description = "This is our MLOps project 2025"
authors = [
  { name = "Group 101" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["itu_mlops_project_101"]
include = ["pyproject.toml", "itu_mlops_project_101/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["itu_mlops_project_101"]
force-sort-within-sections = true

